Enum access_type_enum {
  edit
  view
}

Table users {
  uuid uuid [primary key]
  username varchar [not null]
  email varchar [not null]
  password varchar [not null]
}

Table files {
  id uuid [primary key]
  context uuid [not null]
  storage_key text
  mime_type text
  file_type text
  size_bytes bigint
}

Table contexts {
  uuid uuid [primary key]
  prompt text
  presentation_id uuid
}

Table presentations {
  uuid uuid [primary key]
  title varchar [not null]
  user_id uuid [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table slides {
  uuid uuid [primary key]
  content text [not null]
  presentation_id uuid [not null]
  slide_order int [not null]
}

Table presentations_access {
  uuid uuid [primary key]
  user_id uuid
  presentation_id uuid
  access_type access_type_enum
  expires_at timestamp
}

// Relationships
Ref: presentations.user_id > users.uuid [delete: cascade]

Ref: slides.presentation_id > presentations.uuid [delete: cascade]

Ref: files.context > contexts.uuid [delete: cascade]

Ref: contexts.presentation_id - presentations.uuid [delete: cascade]

Ref: presentations_access.user_id > users.uuid [delete: cascade]

Ref: presentations_access.presentation_id > presentations.uuid [delete: cascade]